feat: Add Code Prettier tool
Adds a new  file which provides a web-based code formatter
using Prettier (standalone). It supports various languages like JSON, JS, HTML,
CSS, Markdown, and YAML.

Updates  to include a link to the new Code Prettier tool.
Also ensures  has a consistent footer.

--- a/index.html
+++ b/index.html
@@ -27,6 +27,12 @@
                         一个预览 HTML 的工具
                     </span>
                 </li>
+                <li class="pl-2">
+                    <a href="code-prettier.html" class="text-blue-600 hover:text-blue-800 underline font-medium">Code Prettier</a>
+                    <span class="text-gray-600 ml-2">
+                        代码格式化工具 (支持 JSON, JS, CSS 等)
+                    </span>
+                </li>
             </ul>
         </section>
     </div>
