--- a/index.html
+++ b/index.html
@@ -33,6 +33,12 @@
                         代码格式化工具 (支持 JSON, JS, CSS 等)
                     </span>
                 </li>
+                <li class="pl-2">
+                    <a href="cwebp.html" class="text-blue-600 hover:text-blue-800 underline font-medium">Image to WebP</a>
+                    <span class="text-gray-600 ml-2">
+                        图片转 WebP 工具 (支持 JPG/PNG)
+                    </span>
+                </li>
             </ul>
         </section>
     </div>
@@ -43,7 +49,7 @@
             <a href="/" class="hover:text-blue-600 underline">首页</a>
             <a href="https://github.com/xuchunyang/tools/blob/main/README.md" class="hover:text-blue-600 underline" target="_blank">关于工具</a>
             <a href="https://github.com/xuchunyang/tools/blob/main/index.html" class="hover:text-blue-600 underline" target="_blank">查看源码</a>
-            <span class="text-gray-400">更新于 2025-12-18</span>
+            <span class="text-gray-400">更新于 2025-12-19</span>
         </nav>
     </footer>
 
