--- a/index.html
+++ b/index.html
@@ -45,6 +45,12 @@
                         Markdown 实时预览工具
                     </span>
                 </li>
+                <li class="pl-2">
+                    <a href="viewport-size.html" class="text-blue-600 hover:text-blue-800 underline font-medium">Viewport Size</a>
+                    <span class="text-gray-600 ml-2">
+                        查看设备 Viewport 尺寸和屏幕信息
+                    </span>
+                </li>
             </ul>
         </section>
     </div>
