--- a/index.html
+++ b/index.html
@@ -28,6 +28,12 @@
                     </span>
                 </li>
                 <li class="pl-2">
+                    <a href="html-simplifier.html" class="text-blue-600 hover:text-blue-800 underline font-medium">HTML Simplifier</a>
+                    <span class="text-gray-600 ml-2">
+                        简化 HTML，删除无用信息，减少 Token 消耗
+                    </span>
+                </li>
+                <li class="pl-2">
                     <a href="code-prettier.html" class="text-blue-600 hover:text-blue-800 underline font-medium">Code Prettier</a>
                     <span class="text-gray-600 ml-2">
                         代码格式化工具 (支持 JSON, JS, CSS 等)
@@ -61,7 +67,7 @@
             <a href="/" class="hover:text-blue-600 underline">首页</a>
             <a href="https://github.com/xuchunyang/tools/blob/main/README.md" class="hover:text-blue-600 underline" target="_blank">关于工具</a>
             <a href="https://github.com/xuchunyang/tools/blob/main/index.html" class="hover:text-blue-600 underline" target="_blank">查看源码</a>
-            <span class="text-gray-400">更新于 2025-12-19</span>
+            <span class="text-gray-400">更新于 2025-12-24</span>
         </nav>
     </footer>
 
