--- a/index.html
+++ b/index.html
@@ -57,6 +57,12 @@
                         查看设备 Viewport 尺寸和屏幕信息
                     </span>
                 </li>
+                <li class="pl-2">
+                    <a href="qr-reader.html" class="text-blue-600 hover:text-blue-800 underline font-medium">QR Reader</a>
+                    <span class="text-gray-600 ml-2">
+                        QR 码扫描工具 (支持摄像头与图片上传)
+                    </span>
+                </li>
             </ul>
         </section>
     </div>
