feat: add mobile viewer tool

--- a/index.html
+++ b/index.html
@@ -58,6 +58,12 @@
                     </span>
                 </li>
                 <li class="pl-2">
+                    <a href="mobile-viewer.html" class="text-blue-600 hover:text-blue-800 underline font-medium">Mobile Viewer</a>
+                    <span class="text-gray-600 ml-2">
+                        选择常见手机设备并预览指定 URL
+                    </span>
+                </li>
+                <li class="pl-2">
                     <a href="qr-reader.html" class="text-blue-600 hover:text-blue-800 underline font-medium">QR Reader</a>
                     <span class="text-gray-600 ml-2">
                         QR 码扫描工具 (支持摄像头与图片上传)
