--- a/index.html
+++ b/index.html
@@ -432,6 +432,13 @@
                 </article>
                 <article class="tool-card">
                     <div>
+                        <div class="tool-title"><span></span>JSON Preview</div>
+                        <p class="tool-desc">JSON 结构预览工具 (支持搜索与折叠)</p>
+                    </div>
+                    <a class="tool-link" href="json-preview.html">打开工具</a>
+                </article>
+                <article class="tool-card">
+                    <div>
                         <div class="tool-title"><span></span>Image to WebP</div>
                         <p class="tool-desc">图片转 WebP 工具 (支持 JPG/PNG)</p>
                     </div>
@@ -471,7 +478,7 @@
 
     <footer>
         <div class="footer-inner">
-            <span>更新于 2025-12-24</span>
+            <span>更新于 2026-02-03</span>
             <a href="/">首页</a>
             <a href="https://github.com/xuchunyang/tools/blob/main/README.md" target="_blank" rel="noreferrer">关于工具</a>
             <a href="https://github.com/xuchunyang/tools/blob/main/index.html" target="_blank" rel="noreferrer">查看源码</a>
