--- a/index.html
+++ b/index.html
@@ -439,6 +439,13 @@
                 </article>
                 <article class="tool-card">
                     <div>
+                        <div class="tool-title"><span></span>cURL 试验台</div>
+                        <p class="tool-desc">浏览器里的 cURL 核心功能复刻与响应实验室</p>
+                    </div>
+                    <a class="tool-link" href="curl-web.html">打开工具</a>
+                </article>
+                <article class="tool-card">
+                    <div>
                         <div class="tool-title"><span></span>Image to WebP</div>
                         <p class="tool-desc">图片转 WebP 工具 (支持 JPG/PNG)</p>
                     </div>
