chore: tidy hero layout

--- a/index.html
+++ b/index.html
@@ -138,6 +138,9 @@
             box-shadow: var(--shadow);
             position: relative;
             overflow: hidden;
+            display: flex;
+            flex-direction: column;
+            gap: 16px;
         }
 
         .hero-card::after {
@@ -158,15 +161,9 @@
         }
 
         .hero p {
-            margin: 0 0 20px;
+            margin: 0;
             color: var(--ink-muted);
             line-height: 1.6;
-        }
-
-        .hero-actions {
-            display: flex;
-            flex-wrap: wrap;
-            gap: 12px;
         }
 
         .btn {
@@ -382,10 +379,6 @@
                     <a href="https://simonwillison.net/2025/Dec/10/html-tools/" target="_blank" rel="noreferrer" class="tool-link">Simon Willison's HTML Tools</a>。
                     每个工具都是独立的 HTML 文件，完全在浏览器端运行，无后端依赖，并主要通过 AI 辅助构建。
                 </p>
-                <div class="hero-actions">
-                    <a class="btn btn-primary" href="#tools">查看全部工具</a>
-                    <a class="btn btn-secondary" href="markdown-preview.html">快速打开 Markdown Preview</a>
-                </div>
             </div>
             <div class="hero-aside">
                 <div class="stat">
