Add image-compress, llm-chat & qr-tool; remove qr-reader; update index.html

--- a/index.html
+++ b/index.html
@@ -446,6 +446,13 @@
                 </article>
                 <article class="tool-card">
                     <div>
+                        <div class="tool-title"><span></span>Image Compressor</div>
+                        <p class="tool-desc">WebP 压缩 + 最长边缩放</p>
+                    </div>
+                    <a class="tool-link" href="image-compress.html">打开工具</a>
+                </article>
+                <article class="tool-card">
+                    <div>
                         <div class="tool-title"><span></span>Markdown Preview</div>
                         <p class="tool-desc">Markdown 实时预览工具</p>
                     </div>
@@ -467,10 +474,17 @@
                 </article>
                 <article class="tool-card">
                     <div>
-                        <div class="tool-title"><span></span>QR Reader</div>
-                        <p class="tool-desc">QR 码扫描工具 (支持摄像头与图片上传)</p>
+                        <div class="tool-title"><span></span>QR 工具台</div>
+                        <p class="tool-desc">二维码读取与生成（图片上传解析 + PNG/SVG 导出）</p>
                     </div>
-                    <a class="tool-link" href="qr-reader.html">打开工具</a>
+                    <a class="tool-link" href="qr-tool.html">打开工具</a>
+                </article>
+                <article class="tool-card">
+                    <div>
+                        <div class="tool-title"><span></span>LLM Chat Studio</div>
+                        <p class="tool-desc">OpenAI 兼容聊天界面（本地保存参数 + 流式输出）</p>
+                    </div>
+                    <a class="tool-link" href="llm-chat.html">打开工具</a>
                 </article>
             </div>
         </section>
@@ -478,7 +492,7 @@
 
     <footer>
         <div class="footer-inner">
-            <span>更新于 2026-02-03</span>
+            <span>更新于 2026-02-04</span>
             <a href="/">首页</a>
             <a href="https://github.com/xuchunyang/tools/blob/main/README.md" target="_blank" rel="noreferrer">关于工具</a>
             <a href="https://github.com/xuchunyang/tools/blob/main/index.html" target="_blank" rel="noreferrer">查看源码</a>
